@@ -1,4 +1,5 @@
 0.03
+ - Update Module::Install to 1.19 version.
 
 0.02 2015-10-29T22:56:13+01:00
  - Add LICENSE file.
